@@ -160,7 +160,9 @@
   FN_ZORBA_MATH_ISNAN_1,
   FN_ZORBA_MATH_MODF_1,
   FN_ZORBA_MATH_FREXP_1,
+  FN_ZORBA_REF2_NODE_REFERENCE_1,
   FN_ZORBA_REF_NODE_REFERENCE_1,
+  FN_ZORBA_REF2_NODE_BY_REFERENCE_1,
   FN_ZORBA_REF_NODE_BY_REFERENCE_1,
   FN_LOCAL_NAME_1,
   FN_NAMESPACE_URI_1,
