@@ -10,7 +10,8 @@
     <zorba:namespace uri="http://www.zorba-xquery.com/modules/schema" define="ZORBA_SCHEMA_FN_NS" prefix="fn-zorba-schema"/>
     <zorba:namespace uri="http://www.zorba-xquery.com/zorba/internal-functions" define="ZORBA_FN_NS" prefix="fn-zorba"/>
     <zorba:namespace uri="http://www.zorba-xquery.com/zorba/rest-functions" define="ZORBA_REST_FN_NS" prefix="fn-zorba-rest"/>
-    <zorba:namespace uri="http://www.zorba-xquery.com/zorba/node-ref-functions" define="ZORBA_NODEREF_FN_NS" prefix="fn-zorba-ref"/> 
+    <zorba:namespace uri="http://www.zorba-xquery.com/zorba/node-ref-functions" define="ZORBA_NODEREF_FN_NS" prefix="fn-zorba-ref2"/> 
+    <zorba:namespace uri="http://www.zorba-xquery.com/modules/node-reference" define="ZORBA_NODEREF_FN_NS" prefix="fn-zorba-ref"/> 
     <zorba:namespace uri="http://www.zorba-xquery.com/zorba/internal-functions" define="ZORBA_OP_NS" prefix="op-zorba"/>
     <!--  empty prefix
       <zorba:namespace uri="http://www.zorba-xquery.com/zorba/index-functions" define="ZORBA_INDEX_FN_NS" prefix=""/> -->
