@@ -23,6 +23,13 @@
     </zorba:description>
 
     <zorba:function>
+      <zorba:signature localname="node-reference" prefix="fn-zorba-ref2">
+        <zorba:param>node()</zorba:param>
+        <zorba:output>xs:anyURI</zorba:output>
+      </zorba:signature>
+    </zorba:function>
+
+    <zorba:function>
       <zorba:signature localname="node-reference" prefix="fn-zorba-ref">
         <zorba:param>node()</zorba:param>
         <zorba:output>xs:anyURI</zorba:output>
@@ -39,6 +46,13 @@
     <zorba:description author="Zorba Team">
       Iterator to implement the zorba:node-by-reference function.
     </zorba:description>
+
+    <zorba:function>
+      <zorba:signature localname="node-by-reference" prefix="fn-zorba-ref2">
+        <zorba:param>xs:anyURI</zorba:param>
+        <zorba:output>node()</zorba:output>
+      </zorba:signature>
+    </zorba:function>
 
     <zorba:function>
       <zorba:signature localname="node-by-reference" prefix="fn-zorba-ref">
