@@ -1,7 +1,7 @@
-import module namespace zorba =
-  "http://www.zorba-xquery.com/zorba/node-ref-functions";
+import module namespace ref =
+  "http://www.zorba-xquery.com/modules/node-reference";
 
 declare variable $input-context external;
 
 let $book := doc($input-context)/bib/book[1]
-return zorba:node-reference($book)
+return ref:node-reference($book)
