@@ -1,8 +1,8 @@
-import module namespace zorba =
-  "http://www.zorba-xquery.com/zorba/node-ref-functions";
+import module namespace ref =
+  "http://www.zorba-xquery.com/modules/node-reference";
 
 declare variable $input-context external;
 
 let $book := doc($input-context)/bib/book[1]
-let $bookref := zorba:node-reference($book)
-return zorba:node-by-reference($bookref)
+let $bookref := ref:node-reference($book)
+return ref:node-by-reference($bookref)
